# stack-bench

./: .env.example  .env.tpl  .gitignore  .mcp.json  .mise.toml  CLAUDE.md  Justfile  README.md  docker-compose.yml  package-lock.json  patterns.yaml
.claude/: sdlc.yml  settings.json
app/backend/: .env.example  .gitignore  Dockerfile  Justfile  entrypoint.sh  pyproject.toml
app/backend/__tests__/: conftest.py  test_auth_endpoints.py  test_auth_router.py  test_github_oauth.py  test_github_oauth_router.py  test_health.py  test_onboarding_router.py  test_onboarding_workflow.py
app/backend/__tests__/features/: test_agent_runs.py  test_branches.py  test_cascade_steps.py  test_check_runs.py  test_conversation_links.py  test_conversations.py  test_github_connections.py  test_jobs.py  test_merge_cascades.py  test_message_parts.py  test_messages.py  test_projects.py  test_seed_data.py  test_sprints.py  test_task_comments.py  test_task_projects.py  test_task_relations.py  test_task_tags.py  test_tasks.py  test_tool_calls.py  test_workspaces.py
app/backend/__tests__/integration/: test_event_flow.py
app/backend/__tests__/molecules/: test_broadcast_bridge.py  test_cascade_handler.py  test_cascade_workflow.py  test_clone_manager.py  test_conversation_api.py  test_conversation_by_entity.py  test_conversation_recall.py  test_conversation_runner.py  test_event_publisher.py  test_event_setup.py  test_event_topics.py  test_gcp_client.py  test_github_adapter.py  test_github_oauth_api.py  test_job_dispatcher.py  test_job_execution_bridge.py  test_job_handlers.py  test_local_git_adapter.py  test_merge_cascade_entity.py  test_needs_restack.py  test_project_setup.py  test_remote_restack.py  test_runner_selection.py  test_stack_api.py  test_stack_api_events.py  test_stack_api_reader.py  test_stack_entity.py  test_stack_provider.py  test_stack_sync.py  test_stub_runner.py  test_sync_engine.py  test_task_job_conversation.py  test_task_management_api.py  test_task_management_entity.py  test_webhook_dispatcher.py  test_workspace_manager.py
app/backend/__tests__/organisms/: test_app_lifespan.py  test_auth_router.py  test_cascade_endpoints.py  test_error_handlers.py  test_event_router.py  test_project_routers.py  test_push_sync.py  test_routers.py  test_send_endpoint.py  test_stack_cli.py  test_stack_routers.py  test_task_router.py  test_task_routers.py  test_webhooks.py  test_workspace_routers.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: 06f1d07766f4_merge_heads.py  0bdc598a80f6_add_users_connections.py  1505160361ec_add_project_local_path_and_github_repo.py  20cb22b7ab0f_add_merge_cascade_tables.py  41d879a25969_add_workspace_provisioning.py  4cce8c49ef0c_merge_heads.py  89e145f87ff2_add_review_comments_table.py  8ee48e061de8_merge_migration_heads.py  a1f2c3d4e5f6_add_conversation_type.py  a3f7c8d91e42_add_task_management_tables.py  a3f7e2b91c04_add_github_connections.py  a8a10495d2b9_add_users_table.py  b1a2c3d4e5f6_merge_all_heads.py  b2a3c4d5e6f7_add_conversation_links.py  b3e8f2a91c04_add_task_id_to_jobs.py  c1f0f154b442_merge_heads_before_users.py  c2b3a4d5e6f7_add_project_owner_id.py  c56f747d1220_initial_schema.py  d1cb467285fc_add_stacks_branches_pull_requests.py
app/backend/docs/specs/: 2026-03-24-event-stream-and-subsystem-wiring.md
app/backend/src/config/: settings.py
app/backend/src/features/: __init__.py
app/backend/src/molecules/: exceptions.py
app/backend/src/seeds/: __init__.py  agents.yaml  example.yaml  specs.py  stacks.yaml  tasks.yaml
backend/: .env.example  Justfile  Makefile  alembic.ini  docker-compose.yml  patterns.yaml  pyproject.toml
backend/alembic/versions/: 94f4eb416247_initial_tables.py  d1cb467285fc_add_stacks_branches_pull_requests.py  ec4e248f15f5_add_projects_and_workspaces.py
backend/config/: settings.py
backend/features/: __init__.py
backend/features/agent_definitions/: models.py  service.py
backend/features/agent_definitions/schemas/: input.py  output.py
backend/features/agent_runs/: __init__.py  models.py  service.py
backend/features/agent_runs/schemas/: __init__.py  output.py
backend/features/branches/: __init__.py  models.py  service.py
backend/features/branches/schemas/: input.py
backend/features/conversations/: __init__.py  models.py  service.py
backend/features/conversations/schemas/: __init__.py  input.py  output.py
backend/features/jobs/: models.py  service.py
backend/features/jobs/schemas/: __init__.py  input.py
backend/features/message_parts/: __init__.py  models.py  service.py
backend/features/message_parts/schemas/: __init__.py  output.py
backend/features/messages/: __init__.py  models.py  service.py
backend/features/messages/schemas/: input.py  output.py
backend/features/projects/schemas/: input.py
backend/features/pull_requests/: models.py  service.py
backend/features/pull_requests/schemas/: input.py
backend/features/role_templates/: models.py  service.py
backend/features/stacks/: service.py
backend/features/stacks/schemas/: output.py
backend/features/tool_calls/: models.py  service.py
backend/features/workspaces/: __init__.py  service.py
backend/molecules/: exceptions.py
backend/molecules/agents/: assembler.py
backend/molecules/apis/: conversation_api.py  stack_api.py
backend/molecules/entities/: conversation_entity.py  stack_entity.py
backend/molecules/providers/: __init__.py  stack_cli_adapter.py  stack_provider.py
backend/molecules/runtime/: agent_factory.py  conversation_runner.py
backend/organisms/api/: app.py  dependencies.py
backend/seeds/: agents.py  agents.yaml  run_seed.py  specs.py
backend/tests/: test_seed.py
backend/tests/features/: test_agent_definitions.py  test_branches.py  test_conversations.py  test_pull_requests.py  test_role_templates.py  test_stacks.py  test_workspaces.py
backend/tests/molecules/: test_assembler.py  test_conversation_entity.py  test_conversation_runner.py  test_exceptions.py  test_stack_api.py  test_stack_cli_adapter.py  test_stack_entity.py
backend/tests/organisms/: test_project_routers.py  test_routers.py
(+742 files in other folders)
