[project]
name = "stack-bench-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pattern-stack",
    "agentic-patterns",
    "fastapi",
    "uvicorn[standard]",
    "alembic",
    "asyncpg",
    "pyyaml",
    "httpx",
    "redis",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-benchmark",
    "factory-boy",
    "faker",
    "testcontainers[postgres]",
    "ruff",
    "mypy",
]

[tool.uv.sources]
pattern-stack = { git = "https://github.com/pattern-stack/backend-patterns.git" }
agentic-patterns = { git = "https://github.com/pattern-stack/agentic-patterns.git" }

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pts]
seeds_module = "seeds"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "pattern_stack.*",
    "agentic_patterns.*",
]
ignore_missing_imports = true
follow_imports = "silent"
disallow_any_unimported = false

[tool.pytest.ini_options]
testpaths = ["__tests__"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Fast unit tests",
    "integration: Tests with external dependencies",
    "slow: Tests that take > 1 second",
]

[tool.coverage.run]
source = ["src/features", "src/molecules", "src/organisms"]

[tool.coverage.report]
fail_under = 80
